--- a/src/common/ManagedCommon/ManagedCommon.csproj
+++ b/src/common/ManagedCommon/ManagedCommon.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Management" Version="7.0.0" />
+    <PackageReference Include="MaterialColorUtilities" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
